--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react": "16.2.0",
     "react-big-calendar": "0.19.0",
     "react-bootstrap": "0.32.1",
+    "react-bootstrap-maskedinput": "^0.4.0",
     "react-bootstrap-sweetalert": "4.2.3",
     "react-bootstrap-switch": "15.5.3",
     "react-chartist": "0.13.1",
